# python-tests

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/SimpleTests/: simple_tests.py
tests/: test_simple.py
