[metadata]
name = SimpleTests
description = Simple tests
author = Gabriel Dias
platforms = win32, unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages =
    SimpleTests
install_requires=
    numpy>=1
python_requires = >= 3.10
package_dir = 
    =src
zip_safe = no

[options.package_data]
SimpleTests = py.typed

[flake8]
max-line-length = 160